--- a/src/main/resources/templates/ticket/detalhesChamados.html
+++ b/src/main/resources/templates/ticket/detalhesChamados.html
@@ -7,10 +7,61 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>Detalhes do Chamado</title>
-    <link type="text/css" rel="stylesheet" th:href="@{/materialize/css/materialize.index.css}"
-        media="screen,projection" />
+    <title>Cadastrar Chamado</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        crossorigin="anonymous" />
+    <link type="text/css" rel="stylesheet" href="materialize/css/materialize.index.css" media="screen,projection" />
     <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
+
+    <style>
+        @keyframes fadeIn {
+            0% {
+                opacity: 0;
+                transform: translateY(20px);
+            }
+
+            100% {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+
+        .fade-in {
+            animation: fadeIn 0.6s ease-in-out forwards;
+            /* ajuste a duração e a função de temporização conforme necessário */
+        }
+
+        /* Estilos para a barra de pesquisa */
+        .search-bar {
+            position: absolute;
+            top: 0;
+            right: 20px;
+            margin-top: 10px;
+        }
+
+        .search-input {
+            width: 250px;
+            padding: 8px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            font-size: 14px;
+        }
+
+        .search-btn {
+            padding: 8px 12px;
+            background-color: #007bff;
+            color: white;
+            border: none;
+            cursor: pointer;
+            border-radius: 4px;
+            font-size: 14px;
+        }
+
+        .search-btn:hover {
+            background-color: #0056b3;
+        }
+    </style>
+
 </head>
 
 <body class="sb-nav-fixed">
@@ -40,6 +91,7 @@
                 </ul>
             </li>
         </ul>
+        <!-- Barra de pesquisa -->
     </nav>
     <div id="layoutSidenav">
         <div id="layoutSidenav_nav">
@@ -49,11 +101,11 @@
                         <div class="sb-sidenav-menu-heading">Core</div>
                         <a class="nav-link" href="/principal">
                             <div class="sb-nav-link-icon"><i class="fa-solid fa-chart-simple"
-                                    style="margin-right: 10px;"></i></div>
-                            Dashboard
-                        </a>
-                        <div class="sb-sidenav-menu-heading">Interface</div>
-                        <a class="nav-link collapsed" href="#" data-bs-toggle="collapse"
+                                style="margin-right: 10px;"></i></div>
+                                Dashboard
+                            </a>
+                            <div class="sb-sidenav-menu-heading">Interface</div>
+                            <a class="nav-link collapsed" href="#" data-bs-toggle="collapse"
                             data-bs-target="#collapseLayouts" aria-expanded="false" aria-controls="collapseLayouts">
                             <div class="sb-nav-link-icon"><i class="fa-solid fa-bars" style="margin-right: 10px;"></i>
                             </div>
@@ -64,107 +116,190 @@
                             data-bs-parent="#sidenavAccordion">
                             <nav class="sb-sidenav-menu-nested nav">
                                 <a class="nav-link" href="/chamado"><i class="fa-solid fa-plus"
-                                        style="margin-right: 10px;"></i>Novo chamado</a>
-                                <a class="nav-link" href="/consultar"><i class="fa-solid fa-magnifying-glass"
+                                    style="margin-right: 10px;"></i>Novo chamado</a>
+                                    <a class="nav-link" href="/consultar"><i class="fa-solid fa-magnifying-glass"
                                         style="margin-right: 10px;"></i>Consultar chamado</a>
-                            </nav>
-                        </div>
-                        <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#collapsePages"
-                            aria-expanded="false" aria-controls="collapsePages">
-                            <div class="sb-nav-link-icon"><i class="fa-solid fa-clipboard-user"
+                                    </nav>
+                                </div>
+                                <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#collapsePages"
+                                aria-expanded="false" aria-controls="collapsePages">
+                                <div class="sb-nav-link-icon"><i class="fa-solid fa-clipboard-user"
                                     style="margin-right: 10px;"></i></div>
-                            Gerenciamento
-                            <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
-                        </a>
-                        <div class="collapse" id="collapsePages" aria-labelledby="headingTwo"
-                            data-bs-parent="#sidenavAccordion">
-                            <nav class="sb-sidenav-menu-nested nav">
-                                <a class="nav-link" href="layout-static.html"><i class="fa-solid fa-address-card"
+                                    Gerenciamento
+                                    <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
+                                </a>
+                                <div class="collapse" id="collapsePages" aria-labelledby="headingTwo"
+                                data-bs-parent="#sidenavAccordion">
+                                <nav class="sb-sidenav-menu-nested nav">
+                                    <a class="nav-link" href="layout-static.html"><i class="fa-solid fa-address-card"
                                         style="margin-right: 10px;"></i>Novo Colaborador</a>
-                                <a class="nav-link" href="layout-static.html"><i class="fa-solid fa-magnifying-glass"
-                                        style="margin-right: 10px;"></i>Consultar Colaborador</a>
-                            </nav>
+                                        <a class="nav-link" href="layout-static.html"><i class="fa-solid fa-magnifying-glass"
+                                            style="margin-right: 10px;"></i>Consultar Colaborador</a>
+                                        </nav>
                         </div>
                         <div class="sb-sidenav-menu-heading">Addons</div>
                         <a class="nav-link" href="charts.html">
                             <div class="sb-nav-link-icon"><i class="fa-solid fa-chart-pie"
+                                style="margin-right: 5px;"></i></div>
+                                Charts
+                            </a>
+                            <a class="nav-link" href="tables.html">
+                                <div class="sb-nav-link-icon"><i class="fa-solid fa-clipboard-list"
                                     style="margin-right: 5px;"></i></div>
-                            Charts
-                        </a>
-                        <a class="nav-link" href="tables.html">
-                            <div class="sb-nav-link-icon"><i class="fa-solid fa-clipboard-list"
-                                    style="margin-right: 5px;"></i></div>
-                            Tables
-                        </a>
-                        <div class="sb-sidenav-menu-heading">Admistrador</div>
-                        <a class="nav-link" href="tables.html">
-                            <div class="sb-nav-link-icon"><i class="fa-solid fa-users" style="margin-right: 5px;"></i>
+                                    Tables
+                                </a>
+                                <div class="sb-sidenav-menu-heading">Admistrador</div>
+                                <a class="nav-link" href="tables.html">
+                                    <div class="sb-nav-link-icon"><i class="fa-solid fa-users" style="margin-right: 5px;"></i>
+                                    </div>
+                                    Gerenciamento user
+                                </a>
                             </div>
-                            Gerenciamento user
-                        </a>
-                    </div>
-                </div>
-                <div class="sb-sidenav-footer">
-                    <div class="small">Logado no:</div>
-                    Sistema Demo
-                </div>
-            </nav>
-        </div>
-        <div id="layoutSidenav_content">
-            <main>
-                <div class="container-fluid px-4">
-                    <!-- Aqui vai o conteúdo específico dos detalhes do chamado -->
-                    <h1>Detalhes do Chamado</h1>
-                    <div>
-                        <h2 th:text="${chamado.titulo}"></h2>
-                        <p><strong>Descrição:</strong> <span th:text="${chamado.descricao}"></span></p>
-                        <!-- Adicione mais campos conforme necessário -->
-                    </div>
-                </div>
-            </main>
-            <footer class="py-4 bg-light mt-auto">
-                <div class="container-fluid px-4">
-                    <div class="d-flex align-items-center justify-content-between small">
-                        <div class="text-muted">Copyright &copy; Davi Website 2024</div>
-                        <div>
-                            <a href="#">Privacy Policy</a>
-                            &middot;
-                            <a href="#">Terms &amp; Conditions</a>
                         </div>
-                    </div>
+                        <div class="sb-sidenav-footer">
+                            <div class="small">Logado no:</div>
+                            Sistema Demo
+                        </div>
+                    </nav>
                 </div>
-            </footer>
-        </div>
-    </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-    <script type="text/javascript" th:src="@{/materialize/js/materialize.min.js}"></script>
-    <script>/*!
-        * Start Bootstrap - SB Admin v7.0.7 (https://startbootstrap.com/template/sb-admin)
-        * Copyright 2013-2023 Start Bootstrap
-        * Licensed under MIT (https://github.com/StartBootstrap/startbootstrap-sb-admin/blob/master/LICENSE)
-        */
-        // 
-    // Scripts
-    // 
-    
-    window.addEventListener('DOMContentLoaded', event => {
-    
-      // Toggle the side navigation
-      const sidebarToggle = document.body.querySelector('#sidebarToggle');
-      if (sidebarToggle) {
-          // Uncomment Below to persist sidebar toggle between refreshes
-          // if (localStorage.getItem('sb|sidebar-toggle') === 'true') {
-          //     document.body.classList.toggle('sb-sidenav-toggled');
-          // }
-          sidebarToggle.addEventListener('click', event => {
-              event.preventDefault();
-              document.body.classList.toggle('sb-sidenav-toggled');
-              localStorage.setItem('sb|sidebar-toggle', document.body.classList.contains('sb-sidenav-toggled'));
-          });
-      }
-    
-    });
-    </script>
-</body>
+                <div id="layoutSidenav_content">
+                    <main>
+                        <div class="container">
+                            
+                            <div class="search-bar">
+                                <input type="text" id="searchInput" class="search-input" placeholder="Buscar por código..." oninput="filterTable()">
+                                <button class="search-btn" onclick="filterTable()">Buscar</button>
+                            </div>
+                            
+                            <h1 class="listada">Lista de Chamados</h1>
+                            <div class="table-responsive">
+                                <table class="table table-striped">
+                                    <thead>
+                                        <tr>
+                                            <th>Codigo</th>
+                                            <th th:if="${isAdmin}">Nome</th>
+                                            <th>Título</th>
+                                            <th>Descrição</th>
+                                            <th>Status</th>
+                                            <th>Tipo do Chamado</th>
+                                            <th>Ação</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr th:each="chamado, rowStat : ${chamados}" class="fade-in">
+                                            <td class="codigoChamado" th:text="${chamado.codigoBusca}">CODIGO</td>
+                                            <td th:if="${isAdmin}" th:text="${chamado.colaborador.nome}">Nome</td>
+                                            <td th:text="${chamado.titulo}">Título</td>
+                                            <td th:text="${chamado.descricao}">Descrição</td>
+                                            <td>
+                                                <span th:classappend="${chamado.status == 'aberto'} ? 'badge bg-success' : 'badge bg-danger'">
+                                                    <span th:text="${chamado.status}"></span>
+                                                </span>
+                                            </td>
+                                            <td>
+                                                <span th:switch="${chamado.tipoDeChamado}">
+                                                    <span th:case="1" class="badge bg-primary">Informática</span>
+                                                    <span th:case="2" class="badge bg-orange">Financeiro</span>
+                                                    <span th:case="3" class="badge bg-info">Jurídico</span>
+                                                </span>
+                                            </td>
+                                            <th>
+                                                <a href="#" class="btn-analisar" data-bs-toggle="modal" data-bs-target="#modalAnalisar">
+                                                    <i class="fas fa-circle" style="color: #00b32d; margin-right: 5px;"></i>Analisar
+                                                </a>
+                                            </th>                                            
+                                        </tr>
+                                    </tbody>
+                                </table>
+                                <div class="modal fade" id="modalAnalisar" tabindex="-1" aria-labelledby="modalAnalisarLabel" aria-hidden="true">
+                                    <div class="modal-dialog">
+                                        <div class="modal-content">
+                                            <div class="modal-header">
+                                                <h5 class="modal-title" id="modalAnalisarLabel">Análise do Chamado</h5>
+                                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                            </div>
+                                            <div class="modal-body">
+                                                <!-- Conteúdo do modal -->
+                                                <div th:each="chamado, rowStat : ${chamados}" class="fade-in">
+                                                    <h1 th:text="${chamado.titulo}"></h1>
+                                                </div>
 
-</html>
+                                             
+                                            </div>
+                                            <div class="modal-footer">
+                                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
+                                                <button type="button" class="btn btn-primary">Salvar Mudanças</button>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </main>
+                    <footer class="py-4 bg-light mt-auto">
+                        <div class="container-fluid px-4">
+                            <div class="d-flex align-items-center justify-content-between small">
+                                <div class="text-muted">Copyright &copy; Davi Website 2024</div>
+                                <div>
+                                    <a href="#">Privacy Policy</a>
+                                    &middot;
+                                    <a href="#">Terms &amp; Conditions</a>
+                                </div>
+                            </div>
+                        </div>
+                    </footer>
+                </div>
+            </div>
+        </div>
+
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+            crossorigin="anonymous"></script>
+        <script src="materialize/js/materialize.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js" crossorigin="anonymous"></script>
+        <script>
+            document.addEventListener('DOMContentLoaded', function() {
+                var codigoCells = document.querySelectorAll('.codigoChamado');
+        
+                codigoCells.forEach(function(codigoCell) {
+                    var codigoText = codigoCell.textContent.trim();
+                    
+                    // Exibir apenas os primeiros 6 caracteres
+                    var shortenedCodigo = codigoText.substring(0, 6);
+                    
+                    // Adicionar os três pontos se o código for maior que 6 caracteres
+                    if (codigoText.length > 6) {
+                        shortenedCodigo += '';
+                    }
+                    
+                    // Substituir o conteúdo da célula pelo código encurtado
+                    codigoCell.textContent = shortenedCodigo;
+                });
+            });
+        </script>
+        <script>
+            function filterTable() {
+                var input, filter, table, tr, td, i, txtValue;
+                input = document.getElementById("searchInput");
+                filter = input.value.toUpperCase();
+                table = document.querySelector(".table");
+                tr = table.getElementsByTagName("tr");
+        
+                for (i = 0; i < tr.length; i++) {
+                    td = tr[i].getElementsByTagName("td")[0]; // Coluna do Código
+        
+                    if (td) {
+                        txtValue = td.textContent || td.innerText;
+                        if (txtValue.toUpperCase().indexOf(filter) > -1) {
+                            tr[i].style.display = "";
+                        } else {
+                            tr[i].style.display = "none";
+                        }
+                    }
+                }
+            }
+        </script>
+        
+        
+    </body>
+
+    </html>
