--- a/src/main/resources/templates/ticket/searchchamado.html
+++ b/src/main/resources/templates/ticket/searchchamado.html
@@ -165,6 +165,7 @@
                 <div id="layoutSidenav_content">
                     <main>
                         <div class="container">
+                            
                             <div class="search-bar">
                                 <input type="text" id="searchInput" class="search-input" placeholder="Buscar por código..." oninput="filterTable()">
                                 <button class="search-btn" onclick="filterTable()">Buscar</button>
@@ -203,13 +204,31 @@
                                                 </span>
                                             </td>
                                             <th>
-                                                <a href="#" class="btn-analisar">
+                                                <a href="#" class="btn-analisar" data-bs-toggle="modal" data-bs-target="#modalAnalisar">
                                                     <i class="fas fa-circle" style="color: #00b32d; margin-right: 5px;"></i>Analisar
                                                 </a>
-                                            </th>
+                                            </th>                                            
                                         </tr>
                                     </tbody>
                                 </table>
+                                <div class="modal fade" id="modalAnalisar" tabindex="-1" aria-labelledby="modalAnalisarLabel" aria-hidden="true">
+                                    <div class="modal-dialog">
+                                        <div class="modal-content">
+                                            <div class="modal-header">
+                                                <h5 class="modal-title" id="modalAnalisarLabel">Análise do Chamado</h5>
+                                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                            </div>
+                                            <div class="modal-body">
+                                                <!-- Conteúdo do modal -->
+                                                <p>Aqui você pode adicionar detalhes adicionais sobre a análise do chamado.</p>
+                                            </div>
+                                            <div class="modal-footer">
+                                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
+                                                <button type="button" class="btn btn-primary">Salvar Mudanças</button>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </main>
