--- a/src/main/resources/templates/ticket/searchchamado.html
+++ b/src/main/resources/templates/ticket/searchchamado.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>Cadastrar Chamado</title>
+    <title>Consulta de chamados</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         crossorigin="anonymous" />
     <link type="text/css" rel="stylesheet" href="materialize/css/materialize.index.css" media="screen,projection" />
@@ -206,8 +206,7 @@
                                             </td>
                                             <td>
                                                 <a th:href="@{/detalhes/{id}(id=${chamado.id})}">Analisar</a>
-                                            </td>                            
-                                                       
+                                            </td>                              
                                         </tr>
                                     </tbody>
                                 </table>
